--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "typescript": "~5.3.3",
-    "undefined": "expo-camera/legacy"
+    "undefined": "expo-camera/legacy",
+    "@react-native-community/datetimepicker": "8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
